@@ -56,6 +56,7 @@
         <configuration>
           <redirectTestOutputToFile>true</redirectTestOutputToFile>
           <argLine>--add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
+          <argLine>--add-exports javafx.fxml</argLine>
         </configuration>
       </plugin>
       <plugin>
